# tatami_tiledb

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: check-install.yaml  doxygenate.yaml  run-tests.yaml
cmake/: Config.cmake.in
docs/: DenseMatrix_8hpp.html  DenseMatrix_8hpp_source.html  Doxyfile  SparseMatrix_8hpp.html  SparseMatrix_8hpp_source.html  TileDbDenseMatrix_8hpp.html  TileDbDenseMatrix_8hpp_source.html  TileDbOptions_8hpp.html  TileDbOptions_8hpp_source.html  TileDbSparseMatrix_8hpp.html  TileDbSparseMatrix_8hpp_source.html  annotated.html  classes.html  classtatami__tiledb_1_1DenseMatrix-members.html  classtatami__tiledb_1_1DenseMatrix.html  classtatami__tiledb_1_1DenseMatrix__coll__graph.md5  classtatami__tiledb_1_1DenseMatrix__inherit__graph.map  classtatami__tiledb_1_1SparseMatrix-members.html  classtatami__tiledb_1_1SparseMatrix.html  classtatami__tiledb_1_1SparseMatrix__coll__graph.md5  classtatami__tiledb_1_1SparseMatrix__inherit__graph.map  classtatami__tiledb_1_1TileDbDenseMatrix-members.html  classtatami__tiledb_1_1TileDbDenseMatrix.html  classtatami__tiledb_1_1TileDbDenseMatrix__coll__graph.map  classtatami__tiledb_1_1TileDbDenseMatrix__coll__graph.md5  classtatami__tiledb_1_1TileDbDenseMatrix__inherit__graph.map  classtatami__tiledb_1_1TileDbDenseMatrix__inherit__graph.md5  classtatami__tiledb_1_1TileDbSparseMatrix-members.html  classtatami__tiledb_1_1TileDbSparseMatrix.html  classtatami__tiledb_1_1TileDbSparseMatrix__coll__graph.md5  classtatami__tiledb_1_1TileDbSparseMatrix__inherit__graph.map  classtatami__tiledb_1_1TileDbSparseMatrix__inherit__graph.md5  dir_062b1566f23dd04b5446fcd3d9995a04.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  (+25 more)
docs/search/: all_0.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_3.js  classes_a.js  classes_c.js  classes_d.js  files_3.js  files_6.js  files_8.js  files_a.js  files_b.js  files_c.js  functions_0.js  functions_3.js  functions_4.js  functions_7.js  functions_8.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  functions_f.js  namespaces_0.js  pages_0.js  (+12 more)
include/tatami_tiledb/: DenseMatrix.hpp  SparseMatrix.hpp  TileDbDenseMatrix.hpp  TileDbMatrix.hpp  TileDbOptions.hpp  TileDbSparseMatrix.hpp  TiledbDenseMatrix.hpp  TiledbOptions.hpp  TiledbSparseMatrix.hpp  make_TileDbMatrix.hpp  make_TiledbMatrix.hpp  serialize.hpp  tatami_tiledb.hpp  utils.hpp
tests/: CMakeLists.txt
tests/src/: DenseMatrix.cpp  SparseMatrix.cpp  TileDbDenseMatrix.cpp  TileDbSparseMatrix.cpp  parallel.h  temp_file_path.h  utils.cpp
